@@ -1,5 +1,6 @@
 22.dec (la)
       - fix #8347: tie in note entry does not work for voice > 1 after a barline (patch by fnbecker)
+      - fix #8308: Creating triplet in grace note leads to time corruption
        (ws)
       - fix #8358: new score: create one measure more when pickup measure selected
 21.dec (mi)
